image not showing solved

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ nav {
 }
 
 .hero {
-    background-image: url(/assets/images/hero-image.png);
+    background-image: url("./assets/images/hero-image.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -188,7 +188,7 @@ nav {
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 100px;
-    background-image: url(/assets/images/mobile-step-image.png);
+    background-image: url("./assets/images/mobile-step-image.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -711,7 +711,7 @@ footer {
     }
 
     .hero {
-        background-image: url(/assets/images/hero-image.png);
+        background-image: url("./assets/images/hero-image.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -884,7 +884,7 @@ footer {
     }
 
     .hero {
-        background-image: url(/assets/images/hero-image.png);
+        background-image: url("./assets/images/hero-image.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
@@ -951,7 +951,7 @@ footer {
     /* Steps section */
     .steps_container {
         height: 450px;
-        background-image: url(/assets/images/steps-bg.png);
+        background-image: url("./assets/images/steps-bg.png");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -1113,7 +1113,7 @@ footer {
     }
 
     .hero {
-        background-image: url(/assets/images/hero-image.png);
+        background-image: url("./assets/images/hero-image.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
@@ -1180,7 +1180,7 @@ footer {
     /* Steps section */
     .steps_container {
         height: 450px;
-        background-image: url(/assets/images/steps-bg.png);
+        background-image: url("./assets/images/steps-bg.png");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -1287,7 +1287,7 @@ footer {
     }
 
     .hero {
-        background-image: url(/assets/images/hero-image.png);
+        background-image: url("./assets/images/hero-image.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
@@ -1355,7 +1355,7 @@ footer {
     /* Steps section */
     .steps_container {
         height: 450px;
-        background-image: url(/assets/images/steps-bg.png);
+        background-image: url("./assets/images/steps-bg.png");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
